syntax = "proto3";

package proto;

option go_package = ".;proto";

// 用户服务
service UserService {
    // 用户注册
    rpc Register (RegisterRequest) returns (RegisterResponse);

    // 用户登录
    rpc Login (LoginRequest) returns (LoginResponse);

    // 刷新Token
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
}

// 注册请求
message RegisterRequest {
    string username = 1; // 用户名
    string password = 2; // 密码
    string email = 3;    // 邮箱
}

// 注册响应
message RegisterResponse {
    bool success = 1;       // 注册是否成功
    string message = 2;     // 返回信息
}

// 登录请求
message LoginRequest {
    string username = 1; // 用户名
    string password = 2; // 密码
}

// 登录响应
message LoginResponse {
    bool success = 1;       // 登录是否成功
    string message = 2;     // 返回信息
    string token = 3;       // 登录成功后的认证Token（可选）
    string refreshtoken = 4; //登录成功后的刷新token
}

// 刷新Token请求
message RefreshTokenRequest {
    string refresh_token = 1;
    string 
}

// 刷新Token响应
message RefreshTokenResponse {
    bool success = 1;
    string message = 2;
    string access_token = 3;
    string refresh_token = 4;
}